--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "react-scroll-parallax": "^2.0.4",
+    "styled-components": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
