--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-scripts": "2.1.8",
+    "react-scroll": "^1.7.11",
     "react-scroll-parallax": "^2.0.4",
     "styled-components": "^4.1.3"
   },
