--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "juan-lemos-web",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/juanpale/juan-lemos-web",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
@@ -15,7 +17,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
